--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" xintegrity="sha384-n8MVd4RsNIU0KOVEMeaOijjaOCLjvLupqrTEKirczEltgwCKf2aOux6cZMW5CI3i" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" xintegrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmUb0ZY0l8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" xintegrity="sha384-+VBxd3r6XgURPiLdVj5/p9sDkfrN2JCNsmmibeAXMW+1Ua59ZeCIzAbid8GkqIX0" crossorigin="anonymous"></script>
+    <!-- CSS של KaTeX -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0KOVEMeaOijjaOCLjvLupqrTEKirczEltgwCKf2aOux6cZMW5CI3i" crossorigin="anonymous">
+
+<!-- JavaScript של KaTeX והרחבת הרינדור האוטומטי -->
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmUb0ZY0l8" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURPiLdVj5/p9sDkfrN2JCNsmmibeAXMW+1Ua59ZeCIzAbid8GkqIX0" crossorigin="anonymous" onload="renderMathInElement(document.body)"></script>
     <!-- Chosen Palette: Warm Neutrals (Slate, Zinc) with a Teal accent -->
     <!-- Application Structure Plan: A single-page application with a fixed side navigation bar to switch between thematic sections derived from the presentation slides. This structure provides a clear, logical flow for learning, moving from foundational concepts to advanced topics like the Spectral Theorem and SVD. The core interactive element is the SVD visualizer, designed to make the abstract geometric interpretation of SVD (rotation, scaling, rotation) tangible. Users can input their own 2x2 matrix and see its effect on the unit circle, which is a far more effective learning tool than static text. -->
     <!-- Visualization & Content Choices: 
