--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         .katex {
             font-size: 1.1em;
         }
+        .katex, .katex-display { direction: ltr; }
         .nav-link.active {
             background-color: #0d9488;
             color: white;
