--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             margin: 1em 0;
         }
         .katex {
-            font-size: 1.1em;
+            font-size: 1.1em; irection: ltr;
         }
-        .katex, .katex-display { direction: ltr; }
+        .katex-display { direction: ltr; }
         .nav-link.active {
             background-color: #0d9488;
             color: white;
